finish reportbuildstate function (minus config)

--- a/MoleDeploy.UWPClient/MainPage.xaml
+++ b/MoleDeploy.UWPClient/MainPage.xaml
@@ -36,7 +36,7 @@
                         <RectangleGeometry Rect="0,0,50,330"/>
                     </Ellipse.Clip>
                 </Ellipse>
-                <TextBlock HorizontalAlignment="Center" Text="Building App" TextWrapping="Wrap" VerticalAlignment="Top" Foreground="#FF606060" FocusVisualPrimaryBrush="#FF767575" FontSize="20" FontFamily="Segoe UI Light" Grid.Column="2" SelectionChanged="TextBlock_SelectionChanged" RelativePanel.AlignBottomWithPanel="True" RelativePanel.AlignHorizontalCenterWithPanel="True"/>
+                <TextBlock HorizontalAlignment="Center" Text="Building App" TextWrapping="Wrap" VerticalAlignment="Top" Foreground="#FF606060" FocusVisualPrimaryBrush="#FF767575" FontSize="20" FontFamily="Segoe UI Light" Grid.Column="2" RelativePanel.AlignBottomWithPanel="True" RelativePanel.AlignHorizontalCenterWithPanel="True"/>
                 <Image HorizontalAlignment="Center" Height="82" VerticalAlignment="Top" Width="82" Source="Assets/multiple-cogs.png" Grid.Column="2" Margin="0,0,0,-3" RelativePanel.AlignHorizontalCenterWithPanel="True" RelativePanel.AlignVerticalCenterWithPanel="True"/>
             </RelativePanel>
             <RelativePanel Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="6,0,0,0">
@@ -49,7 +49,7 @@
                         <RectangleGeometry Rect="0,0,50,330"/>
                     </Ellipse.Clip>
                 </Ellipse>
-                <TextBlock HorizontalAlignment="Center" Text="Publishing Container" TextWrapping="Wrap" VerticalAlignment="Top" Foreground="#FF606060" FocusVisualPrimaryBrush="#FF767575" FontSize="20" FontFamily="Segoe UI Light" Grid.Column="2" SelectionChanged="TextBlock_SelectionChanged" RelativePanel.AlignBottomWithPanel="True" RelativePanel.AlignHorizontalCenterWithPanel="True"/>
+                <TextBlock HorizontalAlignment="Center" Text="Publishing Container" TextWrapping="Wrap" VerticalAlignment="Top" Foreground="#FF606060" FocusVisualPrimaryBrush="#FF767575" FontSize="20" FontFamily="Segoe UI Light" Grid.Column="2" RelativePanel.AlignBottomWithPanel="True" RelativePanel.AlignHorizontalCenterWithPanel="True"/>
                 <Image HorizontalAlignment="Left" Height="82" VerticalAlignment="Top" Width="82" Source="Assets/docker.png" Grid.Column="2" Margin="7.6,25.6,0,0" RelativePanel.AlignHorizontalCenterWithPanel="True" RelativePanel.AlignVerticalCenterWithPanel="True" Stretch="Uniform"/>
             </RelativePanel>
             <RelativePanel Grid.Column="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="6,0,0,0">
@@ -63,24 +63,12 @@
                     </Ellipse.Clip>
                 </Ellipse>
                 <TextBlock HorizontalAlignment="Center" Text="Upgrading Cluster" TextWrapping="Wrap" VerticalAlignment="Top" Foreground="#FF606060" FocusVisualPrimaryBrush="#FF767575" FontSize="20
-                           " FontFamily="Segoe UI Light" Grid.Column="2" SelectionChanged="TextBlock_SelectionChanged" RelativePanel.AlignBottomWithPanel="True" RelativePanel.AlignHorizontalCenterWithPanel="True"/>
+                           " FontFamily="Segoe UI Light" Grid.Column="2" RelativePanel.AlignBottomWithPanel="True" RelativePanel.AlignHorizontalCenterWithPanel="True"/>
                 <Image HorizontalAlignment="Center" Height="82" VerticalAlignment="Top" Width="82" Source="Assets/white-cog-md.png" Grid.Column="2" Margin="0,0,0,-3" RelativePanel.AlignHorizontalCenterWithPanel="True" RelativePanel.AlignVerticalCenterWithPanel="True"/>
-            </RelativePanel>
-            <RelativePanel Grid.Column="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="6,0,0,0">
-                <Ellipse HorizontalAlignment="Center" Height="125" VerticalAlignment="Top" Width="125" Fill="#FF1DADD8" RenderTransformOrigin="0.5,0.5" Grid.Column="2" RelativePanel.AlignHorizontalCenterWithPanel="True" RelativePanel.AlignVerticalCenterWithPanel="True" />
-                <Ellipse HorizontalAlignment="Center" Height="125" VerticalAlignment="Center" Width="125" Fill="#FF0090C4" RenderTransformOrigin="0.5,0.5" UseLayoutRounding="False" d:LayoutRounding="Auto" Grid.Column="2" RelativePanel.AlignHorizontalCenterWithPanel="True" RelativePanel.AlignVerticalCenterWithPanel="True" Margin="0,0,0,0">
-                    <Ellipse.RenderTransform>
-                        <CompositeTransform Rotation="240"/>
-                    </Ellipse.RenderTransform>
-                    <Ellipse.Clip>
-                        <RectangleGeometry Rect="0,0,50,330"/>
-                    </Ellipse.Clip>
-                </Ellipse>
-                <Image HorizontalAlignment="Center" Height="80" VerticalAlignment="Top" Width="80" Source="Assets/kubernetes.png" Grid.Column="2" RelativePanel.AlignHorizontalCenterWithPanel="True" RelativePanel.AlignVerticalCenterWithPanel="True" Margin="0,1,0,0"/>
             </RelativePanel>
             <RelativePanel Grid.Column="3" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="6,0,0,0">
                 <Ellipse HorizontalAlignment="Center" Height="125" VerticalAlignment="Top" Width="125" Fill="#FF1DADD8" RenderTransformOrigin="0.5,0.5" Grid.Column="2" RelativePanel.AlignHorizontalCenterWithPanel="True" RelativePanel.AlignVerticalCenterWithPanel="True" />
-                <Ellipse HorizontalAlignment="Center" Height="125" VerticalAlignment="Center" Width="125" Fill="#FF0090C4" RenderTransformOrigin="0.5,0.5" UseLayoutRounding="False" d:LayoutRounding="Auto" Grid.Column="2" RelativePanel.AlignHorizontalCenterWithPanel="True" RelativePanel.AlignVerticalCenterWithPanel="True" Margin="0,0,0,0">
+                <Ellipse Name="ellipse_Step4Clip" HorizontalAlignment="Center" Height="125" VerticalAlignment="Center" Width="125" Fill="#FF0090C4" RenderTransformOrigin="0.5,0.5" UseLayoutRounding="False" d:LayoutRounding="Auto" Grid.Column="2" RelativePanel.AlignHorizontalCenterWithPanel="True" RelativePanel.AlignVerticalCenterWithPanel="True" Margin="0,0,0,0">
                     <Ellipse.RenderTransform>
                         <CompositeTransform Rotation="-120"/>
                     </Ellipse.RenderTransform>
@@ -88,7 +76,7 @@
                         <RectangleGeometry Rect="0,0,50,330"/>
                     </Ellipse.Clip>
                 </Ellipse>
-                <TextBlock HorizontalAlignment="Center" Text="Deploy Complete" TextWrapping="Wrap" VerticalAlignment="Top" Foreground="#FF606060" FocusVisualPrimaryBrush="#FF767575" FontSize="20" FontFamily="Segoe UI Light" Grid.Column="2" SelectionChanged="TextBlock_SelectionChanged" RelativePanel.AlignBottomWithPanel="True" RelativePanel.AlignHorizontalCenterWithPanel="True"/>
+                <TextBlock HorizontalAlignment="Center" Text="Deploy Complete" TextWrapping="Wrap" VerticalAlignment="Top" Foreground="#FF606060" FocusVisualPrimaryBrush="#FF767575" FontSize="20" FontFamily="Segoe UI Light" Grid.Column="2" RelativePanel.AlignBottomWithPanel="True" RelativePanel.AlignHorizontalCenterWithPanel="True"/>
                 <Image HorizontalAlignment="Center" Height="82" VerticalAlignment="Top" Width="65" Source="Assets/release.png" Grid.Column="2" Margin="0,5.2,0,0" RelativePanel.AlignHorizontalCenterWithPanel="True" RelativePanel.AlignVerticalCenterWithPanel="True"/>
             </RelativePanel>
         </Grid>
