--- a/MoleDeploy.UWPClient/MainPage.xaml
+++ b/MoleDeploy.UWPClient/MainPage.xaml
@@ -8,7 +8,7 @@
     xmlns:interactivity="using:Microsoft.Xaml.Interactivity"  
     xmlns:behaviors="using:Microsoft.Toolkit.Uwp.UI.Animations.Behaviors"
     mc:Ignorable="d"
-    Background="White" FontFamily="Segoe UI Light">
+    Background="White" FontFamily="Segoe UI Light" Loaded="Page_Loaded">
 
     <RelativePanel HorizontalAlignment="Stretch">
         <Canvas HorizontalAlignment="Stretch" Height="222" VerticalAlignment="Center" Background="#FF0078D7" RelativePanel.AlignTopWithPanel="True" RelativePanel.AlignRightWithPanel="True" RelativePanel.AlignLeftWithPanel="True">
